<?xml version="1.0"?>
<package format="2">
  <name>Bag2PCD_ROStool</name>
  <version>0.0.0</version>
  <description>Read the .bag files and save Lidar points cloud in .pcd files. Coordinate system transformation is optionnal.</description>

  <maintainer email="leo_1@163.com">leofansq</maintainer>

  <license>BSD</license>

  <url></url>

  <author email="leo_1@163.com">leofansq</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>

</package>
